--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Kim's Portfolio</title>
     <link rel="stylesheet" href="./css/reset.css" />
     <link
       rel="stylesheet"
