--- a/index.html
+++ b/index.html
@@ -34,6 +34,21 @@
         </div>
       </div>
     </nav>
+    <section class="container">
+      <div class="row">
+        <h1 class="col-sm">
+          About Me
+        </h1>
+        <div class="row">
+          <div class="col-6">
+            <img src="#" alt="Kim's Portrait" />
+            <div class="col-6">
+              My name is Kimberly Wilks and I am a software engineer.
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
   <script
     src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
