--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <nav class="navbar navbar-expand-sm navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top"
-          >Start Bootstrap</a
+          >Kimberly Wilks</a
         >
         <button
           class="navbar-toggler navbar-toggler-right"
@@ -69,14 +69,10 @@
     <header class="masthead">
       <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
-          <h1 class="mx-auto my-0 text-uppercase">Grayscale</h1>
+          <h1 class="mx-auto my-0 text-uppercase">Kimberly Wilks</h1>
           <h2 class="text-white-50 mx-auto mt-2 mb-5">
-            A free, responsive, one page Bootstrap theme created by Start
-            Bootstrap.
+            Software Engineer
           </h2>
-          <a href="#about" class="btn btn-primary js-scroll-trigger"
-            >Get Started</a
-          >
         </div>
       </div>
     </header>
@@ -86,18 +82,13 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
+            <h2 class="text-white mb-4">About Me</h2>
             <p class="text-white-50">
-              Grayscale is a free Bootstrap theme created by Start Bootstrap. It
-              can be yours right now, simply download the template on
-              <a href="http://startbootstrap.com/template-overviews/grayscale/"
-                >the preview page</a
-              >. The theme is open source, and you can use it for any purpose,
-              personal or commercial.
+              I am currently a student in University of Texas- Austin's coding
+              bootcamp and a Systems Project manager at Facebook.
             </p>
           </div>
         </div>
-        <img src="img/ipad.png" class="img-fluid" alt="" />
       </div>
     </section>
 
@@ -206,10 +197,10 @@
             <div class="card py-4 h-100">
               <div class="card-body text-center">
                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                <h4 class="text-uppercase m-0">Address</h4>
+                <h4 class="text-uppercase m-0">Location</h4>
                 <hr class="my-4" />
                 <div class="small text-black-50">
-                  4923 Market Street, Orlando FL
+                  Austin, TX
                 </div>
               </div>
             </div>
@@ -222,32 +213,19 @@
                 <h4 class="text-uppercase m-0">Email</h4>
                 <hr class="my-4" />
                 <div class="small text-black-50">
-                  <a href="#">hello@yourdomain.com</a>
+                  <a href="#">wilks.kimberly@gmail.com</a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-md-4 mb-3 mb-md-0">
-            <div class="card py-4 h-100">
-              <div class="card-body text-center">
-                <i class="fas fa-mobile-alt text-primary mb-2"></i>
-                <h4 class="text-uppercase m-0">Phone</h4>
-                <hr class="my-4" />
-                <div class="small text-black-50">+1 (555) 902-8832</div>
-              </div>
-            </div>
-          </div>
-        </div>
 
         <div class="social d-flex justify-content-center">
-          <a href="#" class="mx-2">
-            <i class="fab fa-twitter"></i>
+          <a href="https://www.linkedin.com/in/kimberlywilks/" class="mx-2">
+            <i class="fab fa-linkedin"></i>
           </a>
-          <a href="#" class="mx-2">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-          <a href="#" class="mx-2">
+          
+          <a href="https://github.com/kwilks3" class="mx-2">
             <i class="fab fa-github"></i>
           </a>
         </div>
@@ -257,7 +235,7 @@
     <!-- Footer -->
     <footer class="bg-black small text-center text-white-50">
       <div class="container">
-        Copyright &copy; Your Website 2019
+        Copyright &copy; Kimberly Wilks 2020
       </div>
     </footer>
 
