updating contact info

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 
   <body id="page-top">
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-sm navbar-dark fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-sm navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top"
           >Kimberly Wilks</a
@@ -70,8 +70,15 @@
     
 
     <!-- Contact Section -->
-    <
+    <header>
+        <h1>Contact Me</h1>
+    </header>
+
     <form>
+        <div class="form-group">
+            <label for="exampleFormControlInput1">Name</label>
+            <input type="text" class="form-control" id="exampleFormControlInput1" >
+          </div>
         <div class="form-group">
           <label for="exampleFormControlInput1">Email address</label>
           <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
@@ -103,22 +110,9 @@
       </form>
 
     <section class="contact-section bg-black">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4 mb-3 mb-md-0">
-            <div class="card py-4 h-100">
-              <div class="card-body text-center">
-                <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                <h4 class="text-uppercase m-0">Location</h4>
-                <hr class="my-4" />
-                <div class="small text-black-50">
-                  Austin, TX
-                </div>
-              </div>
-            </div>
-          </div>
+     
 
-          <div class="col-md-4 mb-3 mb-md-0">
+          <div class="col-sm-12 mb-3 mb-md-0">
             <div class="card py-4 h-100">
               <div class="card-body text-center">
                 <i class="fas fa-envelope text-primary mb-2"></i>
