--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link js-scroll-trigger" href="#masthead">About</a>
             </li>
             <li class="nav-item">
