updated about me

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <header class="masthead">
       <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
+          
           <h1 class="mx-auto my-0 text-uppercase">Kimberly Wilks</h1>
           <h2 class="text-white-50 mx-auto mt-2 mb-5">
             Software Engineer
@@ -84,9 +85,7 @@
           <div class="col-lg-8 mx-auto">
             <h2 class="text-white mb-4">About Me</h2>
             <p class="text-white-50">
-              I am currently a student in University of Texas- Austin's coding
-              bootcamp and a Systems Project manager at Facebook.
-            </p>
+              I am currently a Systems Project manager at Facebook. I am also a student of the Full Stack Development bootcamp at the University of Texas - Austin.
           </div>
         </div>
       </div>
@@ -124,6 +123,20 @@
               </div>
             </div>
           </div>
+
+          <div class="col-md-4 mb-3 mb-md-0">
+            <div class="card py-4 h-100">
+              <div class="card-body text-center">
+                <i class="fas fa-phone text-primary mb-2"></i>
+                <h4 class="text-uppercase m-0">phone</h4>
+                <hr class="my-4" />
+                <div class="small text-black-50">
+                  <a href="#">Email for number</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
 
 
         <div class="social d-flex justify-content-center">
