removed media queries

--- a/index.html
+++ b/index.html
@@ -82,7 +82,12 @@
     <section id="about" class="about-section text-center">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 mx-auto">
+          <div class= "col">
+            <img src = "img/profile.png" class ="img-fluid" id = "profile"/>
+          </div>
+        </div>
+          <div class="row">
+          <div class="col-sm-8 mx-auto">
             <h2 class="text-white mb-4">About Me</h2>
             <p class="text-white-50">
               I am currently a Systems Project manager at Facebook. I am also a student of the Full Stack Development bootcamp at the University of Texas - Austin.
