--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
 
   <body id="page-top">
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-sm navbar-light fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-sm navbar-dark fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top"
           >Kimberly Wilks</a
@@ -73,7 +73,7 @@
         <!-- Featured Project Row -->
         <div class="row justify-content-center no-gutters">
           <div class="col-sm-6">
-            <img class="img-fluid" src="img/demo-image-01.jpg" alt="" />
+            <img class="img-fluid" src="img/demo-image-01.jpg" alt="mountains" />
           </div>
           <div class="col-sm-6 order-sm-first">
             <div class="bg-black text-center h-100 project">
@@ -88,14 +88,12 @@
               </div>
             </div>
           </div>
-                <div class = "row">
-                  <div class = "col"></div>
-                </div>
+        </div>   
         
         <!-- Project Two Row -->
         <div class="row justify-content-center no-gutters">
           <div class="col-sm-6">
-            <img class="img-fluid" src="img/demo-image-02.jpg" alt="" />
+            <img class="img-fluid" src="img/demo-image-02.jpg" alt="smoky mountains" />
           </div>
           <div class="col-sm-6 order-sm-first">
             <div class="bg-black text-center h-100 project">
