--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <body id="page-top">
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-sm navbar-light fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-sm  fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top"
           >Kimberly Wilks</a
