removed errors from JS

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link js-scroll-trigger" href="#masthead">About</a>
+              <a class="nav-link js-scroll-trigger" data-toggle="tab" href="#masthead">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="portfolio.html"
