--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,9 @@
               >
             </li>
             <li class="nav-item active">
-              <a class="nav-link js-scroll-trigger " href="#">Contact</a>
+              <a class="nav-link js-scroll-trigger " href="#">Contact<span class = "sr-only">(current)</span>
+
+              </a>
             </li>
           </ul>
         </div>
