--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
                 <div
                   class="project-text w-100 my-auto text-center text-sm-right"
                 >
-                  <h4 class="text-white">Code Quiz</h4>
+                  <h4 class="text-white"><a href="https://github.com/kwilks3/Code-Quiz">Code Quiz</a></h4>
                   <p class = "text-white">Take this quick code quiz to test your JavaScript knowledge. </p>
                   <hr class="d-none d-sm-block mb-0 mr-0" />
                 </div>
@@ -102,7 +102,7 @@
                 <div
                   class="project-text w-100 my-auto text-center text-sm-right"
                 >
-                  <h4 class="text-white">PubIO Bar Crawl App</h4>
+                <h4 class="text-white"><a href="https://github.com/pubIO-2020/pubIO">Bar Crawl App</a></h4>
                   <p class= "text-white">A bar crawl application that allows users to partake in bar crawls and gain access to exclusive deals.</p>
                   <hr class="d-none d-sm-block mb-0 mr-0" />
                 </div>
@@ -122,7 +122,7 @@
             <div
               class="project-text w-100 my-auto text-center text-sm-right"
             >
-              <h4 class="text-white">Weather Dashboard</h4>
+            <h4 class="text-white"><a href="https://github.com/kwilks3/WeatherDashboard">Weather Dashboard</a></h4>
               <p class= "text-white">Find weather information on whatever city you're interested in!</p>
               <hr class="d-none d-sm-block mb-0 mr-0" />
             </div>
