added resume link

--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
           <div class="col-sm-8 mx-auto">
             <h2 class="text-white mb-4">About Me</h2>
             <p class="text-white-50">
-              I am currently a Systems Project manager at Facebook. I am also a student of the Full Stack Development bootcamp at the University of Texas - Austin.
-          </div>
+              I am currently a Systems Project manager at Facebook. I am also a student of the Full Stack Development bootcamp at the University of Texas - Austin.</p>
+          <a href= "https://docs.google.com/document/d/1HCgP_k712FAzgPRYCwjFyd4xAfmsmnHmJbJ9x14sQcM/edit?usp=sharing">Read more on my resume!</a>
+            </div>
         </div>
       </div>
     </section>
