added deployed project links

--- a/portfolio.html
+++ b/portfolio.html
@@ -70,11 +70,12 @@
     
     <!-- Projects Section -->
     <section id="projects" class="projects-section bg-light">
+      <p class ="text-center"> Click the project title to head to the GitHub repo or the project image to head to the deployed page. Note: PubIO does not have a deployed page since it is a mobile app. </p>
       <div class="container">
         <!-- Featured Project Row -->
         <div class="row justify-content-center no-gutters project-info">
           <div class="col-sm-6">
-            <img class="img-fluid" src="img/quiz.png" alt="mountains" />
+            <a href="https://kwilks3.github.io/Code-Quiz/"><img class="img-fluid" src="img/quiz.png" alt="code quiz" /></a>
           </div>
           <div class="col-sm-6 order-sm-first">
             <div class="bg-black text-center h-100 project">
@@ -102,7 +103,7 @@
                 <div
                   class="project-text w-100 my-auto text-center text-sm-right"
                 >
-                <h4 class="text-white"><a href="https://github.com/pubIO-2020/pubIO">Bar Crawl App</a></h4>
+                <h4 class="text-white"><a href="https://github.com/pubIO-2020/pubIO">PubIO</a></h4>
                   <p class= "text-white">A bar crawl application that allows users to partake in bar crawls and gain access to exclusive deals.</p>
                   <hr class="d-none d-sm-block mb-0 mr-0" />
                 </div>
@@ -114,7 +115,7 @@
         <!-- Project Three Row -->
       <div class="row justify-content-center no-gutters project-info">
       <div class="col-sm-6">
-        <img class="img-fluid" src="img/weather.png" alt="weather dashboard" />
+        <a href="https://kwilks3.github.io/WeatherDashboard/"><img class="img-fluid" src="img/weather.png" alt="weather dashboard" /></a>
       </div>
       <div class="col-sm-6 order-sm-first">
         <div class="bg-black text-center h-100 project">
